fixed spacing problems and footer

--- a/assets/css/ul_products_style.css
+++ b/assets/css/ul_products_style.css
@@ -67,8 +67,6 @@ ul.products li a{
 /*	text-align: center;*/
 }
 
-
-
 .columns-3{
 		/*DEFAULT COLUMN -SHOP */
 	width: 70%;
@@ -84,11 +82,8 @@ ul.products li a{
 
 	height: 300px;
 	margin: 8px;
-	text-align: center;	
-
-		
+	text-align: center;			
 }
-
 
 .onsale{
 	display: block;
@@ -144,7 +139,7 @@ ins{
 .related{
 	/*background-color: white;*/
 	min-height: 400px;
-	border: 2px solid blue;
+	border: 1px solid white;
 }
 
 .related ul{
